--- a/Sagemaker_notebook_FINAL_price.ipynb
+++ b/Sagemaker_notebook_FINAL_price.ipynb
@@ -385,7 +385,7 @@
    "source": [
     "metrics = sagemaker.analytics.TrainingJobAnalytics(\n",
     "    estimator._current_job_name,\n",
-    "    metric_names=['train:rmse', 'validation:rmse']\n",
+    "    metric_names=['train:rmse', 'validation:rmse', 'train:mae', 'validation:mae']\n",
     ")"
    ]
   },
